# haproxy-dataplane

./: Cargo.toml  README.md
docs/: Acl.md  AclApi.md  AclFile.md  AclFileEntry.md  AclRuntimeApi.md  AwsFilters.md  AwsRegion.md  Backend.md  BackendApi.md  BackendForcePersist.md  BackendSwitchingRule.md  BackendSwitchingRuleApi.md  Balance.md  Bind.md  BindApi.md  BindParams.md  Cache.md  CacheApi.md  Capture.md  ClusterApi.md  ClusterControllerInformation.md  ClusterControllerInformationLogTargetsInner.md  ClusterSettings.md  Compression.md  ConfigStickTable.md  ConfigurationApi.md  Consul.md  Cookie.md  CookieAttrInner.md  CookieDomainInner.md  DeclareCaptureApi.md  DefaultBind.md  DefaultServer.md  Defaults.md  DefaultsApi.md  DgramBind.md  DgramBindApi.md  DiscoveryApi.md  EmailAlert.md  Endpoint.md  (+245 more)
src/apis/: acl_api.rs  acl_runtime_api.rs  backend_api.rs  backend_switching_rule_api.rs  bind_api.rs  cache_api.rs  client.rs  cluster_api.rs  configuration.rs  configuration_api.rs  declare_capture_api.rs  defaults_api.rs  dgram_bind_api.rs  discovery_api.rs  fcgi_app_api.rs  filter_api.rs  frontend_api.rs  global_api.rs  group_api.rs  health_api.rs  http_after_response_rule_api.rs  http_check_api.rs  http_error_rule_api.rs  http_errors_api.rs  http_request_rule_api.rs  http_response_rule_api.rs  information_api.rs  log_forward_api.rs  log_target_api.rs  mailer_entry_api.rs  mailers_api.rs  maps_api.rs  mod.rs  nameserver_api.rs  peer_api.rs  peer_entry_api.rs  process_manager_api.rs  reloads_api.rs  resolver_api.rs  ring_api.rs  (+20 more)
src/models/: acl.rs  acl_file.rs  (+227 more)
