[package]
name = "haproxy-dataplane"
version = "2.9.0"
authors = ["support@haproxy.com"]
description = "API for editing and managing haproxy instances. Provides process information, configuration management, haproxy stats and logs. "
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
reqwest = { version = "0.11.23", default-features = false, features = ["json", "multipart"] }

[features]
default = ["rustls-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]